# jax_trainer

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/jax_trainer/: init_mesh.py  interfaces.py
src/jax_trainer/callbacks/: __init__.py  callback.py  checkpointing.py  classification.py  disable_gc.py  monitor.py  profiler.py
src/jax_trainer/datasets/: __init__.py  collate.py  data_struct.py  examples.py  multihost_dataloading.py  transforms.py  utils.py
src/jax_trainer/logger/: __init__.py  array_storing.py  backend.py  loggers.py  metrics.py  utils.py
src/jax_trainer/optimizer/: __init__.py  optimizer.py  scheduler.py  transforms.py
src/jax_trainer/trainer/: __init__.py  img_classifier.py  trainer.py
src/jax_trainer/utils/: __init__.py  imports.py  pytrees.py
tests/config/: cifar10_classifier.yaml
tests/datasets/: test_datasets.py
tests/logger/: test_array_storing.py  test_backend.py  test_logger.py  test_loggers.py  test_metrics.py  test_utils.py
tests/models/: __init__.py
tests/models/augmentations/: gaussian_noise.py
tests/models/networks/: __init__.py  simple_cnn.py  simple_cnn_linien.py
tests/optimizer/: test_optimizer.py  test_scheduler.py  test_transforms.py
tests/trainer/: test_augmentation_trainer.py  test_augmentation_trainer_linen.py  test_trainer_linen.py
